# TileConverter3d

./: .dockerignore  .gitignore  AGENTS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  start-web.cmd
.opencode/agents/: gis-terrain.md  terrain-web-ui.md
.opencode/commands/: build-terrain-converter.md  build-terrain-web-ui.md
android-demo/: MapLibreTerrainUsage.kt  README.md  TerrainDemoStyle.kt
archive/legacy-python/: README.md
converter/: pyproject.toml
converter/terrain_converter/: __init__.py  bbox.py  cli.py  hgt.py  mbtiles.py  rgb.py  style_json.py  tilejson.py  tiling.py  validate.py
converter/terrain_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
converter/tests/: test_hgt.py  test_rgb.py  test_style_json.py  test_tilejson.py
deploy/docker/: Dockerfile  README.md  docker-compose.yml  run-lan.ps1
docs/: kmp-only-cleanup-plan.md  kmp-only-cleanup-status.md  kotlin-cutover-report.md  kotlin-migration-plan.md  kotlin-migration-status.md  kotlin-parity-matrix.md  kotlin-session-runbook.md  kotlin-web-ui-migration-plan.md  kotlin-web-ui-migration-status.md  kotlin-web-ui-session-runbook.md  kotlin-web-ui-tech-spike.md  terrain-pipeline.md  terrain-ui-redesign-plan.md  terrain-ui-redesign-runbook.md  terrain-ui-redesign-status.md
docs/reviews/: README.md  base-sources-backend-review.md  (+16 more)
web/: Dockerfile  README.md  docker-compose.yml
web/backend/: pyproject.toml
web/backend/app/: converter_runner.py  main.py  mbtiles_server.py  storage.py
web/backend/tests/: test_tilejson.py
(+138 files in other folders)
